# inferno-hart

./: .clang-format  .gitattributes  .gitignore  .vims  ;:w  CMakeCache.txt  CMakeLists.txt  README.md  TODO  compile_commands.json  imgui.ini  install_res.sh  launch.json  suppressions.txt  vk_layer_settings.txt
.cache/clangd/index/: _fixes.hpp.05FB41AD0A9BBC0A.idx  _fixes.hpp.88E6D5940AF0B1C4.idx  _vectorize.hpp.372DB479C39B97AF.idx  _vectorize.hpp.AD0330C391312004.idx  ansicolor_sink-inl.h.84497EDC00A08E9C.idx  ansicolor_sink.h.E059512CE978D974.idx  backtracer-inl.h.68154F5EC1371AF2.idx  backtracer.h.57E2F8A49EF1AF08.idx  camera.cpp.26D8D484626FAD13.idx  camera.cpp.F63DB903EF1144CC.idx  camera.hpp.56DF378B36D53395.idx  camera.hpp.73FE63AF7AF8F9EA.idx  circular_q.h.DBE0B9803CC464B2.idx  closest_point.hpp.12718D3A27224AA4.idx  closest_point.hpp.5A765D6D4678DC4B.idx  closest_point.inl.1C70DD6A47F8E343.idx  closest_point.inl.388393954673B929.idx  common-inl.h.3475FB6915E6F6CD.idx  common.h.8346CC9C4D21208C.idx  common.hpp.C216AAEF2410C212.idx  common.hpp.C52E6C32BE30C292.idx  component_wise.hpp.888F30919DB18F9F.idx  component_wise.hpp.9A503B4509CF6590.idx  component_wise.inl.0BB0F1C35DD74202.idx  component_wise.inl.2ACFE04878523590.idx  compute_common.hpp.4298007337987367.idx  compute_common.hpp.EC3C964FEDE0C3F3.idx  compute_vector_relational.hpp.7625EEEE50603074.idx  compute_vector_relational.hpp.FE9F5B776E409248.idx  console_globals.h.DE646825A4CD3BC2.idx  constants.hpp.55D0AF3824C1E5C6.idx  constants.hpp.75807C982333C89B.idx  constants.inl.31E8B0E81D0A991A.idx  constants.inl.447B6A907EAEE865.idx  core.h.D0F331F036249B29.idx  dispatcher.cpp.9BD943728563947F.idx  dispatcher.cpp.E6A5D7E12DFD8930.idx  dispatcher.hpp.07D5AFF492A31175.idx  dispatcher.hpp.2B4BE3800CF183F1.idx  dual_quaternion.hpp.87AA6A991292361B.idx  (+514 more)
.github/workflows/: c-cpp.yml
.vim/: session
hart/inferno-hart-cpu/: CMakeLists.txt
hart/inferno-hart-cpu/src/: kdtree.cpp  kdtree.hpp  main.cpp
hart/inferno-hart-opencl/: CMakeLists.txt
hart/inferno-hart-opencl/src/: main.cpp
libhart/: common_hardware_accelerator.hpp  hardware_accelerator.hpp  hart.md  hart_graphics.hpp  inferno_hart.hpp
libhart/scene/: camera.hpp  material.hpp  mesh.hpp  object.hpp  scene.hpp
libhart/tracing/: hit.hpp  ray.hpp
res/: Bistro.mtl  BistroExterior.fbx  BistroExteriorScaled.fbx
res/shaders/: basic.frag  basic.frag.spv  basic.glsl  basic.vert  basic.vert.spv  lines_debug.frag  lines_debug.frag.spv  lines_debug.glsl  lines_debug.vert  lines_debug.vert.spv  vulkan_test.frag  vulkan_test.frag.spv  vulkan_test.vert  vulkan_test.vert.spv
res/shaders/unused/: basic.frag  basic.vert  lines_debug.frag  lines_debug.vert
src/: gl.h  graphics.hpp  hart_directory.cpp  hart_directory.hpp  hart_module.cpp  hart_module.hpp  inferno.cpp  inferno.hpp  main.cpp  maths.hpp  random.hpp  scene.cpp  singleton.hpp  version.hpp  window.cpp  window.hpp
src/graphics/: buffer.cpp  buffer.hpp  descriptor.cpp  descriptor.hpp  device.cpp  device.hpp  enumeratescheme.hpp  errorhandling.hpp  image.cpp  image.hpp  pipeline.cpp  pipeline.hpp  renderpass.cpp  renderpass.hpp  rendertarget.cpp  rendertarget.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp  vkrenderer.cpp  vkrenderer.hpp  vulkan_tutorial.cpp  vulkanextensionloader.hpp  vulkanintrospection.hpp
src/gui/: gui.hpp  layout.hpp  style.hpp
src/hart/: hart_module.hpp  scene.cpp
src/preview/: debug.cpp  debug.hpp  renderer.cpp  renderer.hpp
src/preview_renderer/: debug.cpp  debug.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
src/raytracing/: object_tracer.cpp  object_tracer.hpp  ray_source.cpp  ray_source.hpp  renderer.cpp  renderer.hpp
src/renderer/: colour.hpp  dispatcher.cpp  dispatcher.hpp  hit.hpp  object_tracer.cpp  object_tracer.hpp  ray.hpp  ray_source.cpp  ray_source.hpp  renderer.cpp  renderer.hpp  triangle.hpp
src/scene/: camera.cpp  filemanager.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  object.cpp  object.hpp  objloader.cpp  objloader.hpp  scene.cpp  scene.hpp
